--- a/style.css
+++ b/style.css
@@ -16,3 +16,13 @@ header{
     width: 1200px;
     margin: 0 auto;
 }
+.logo-img{
+    width: 100%;
+}
+.logo-img img{
+    width: 100px;
+}
+nav{
+    width:100%;
+    display: flex;
+}
