--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 *
 {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'poppins',sans-serif;
 }
 body{
     width: 100%;
     margin: 0;
     padding: 0;
+}
+a{
+    text-decoration: none;
+    color: #5a5a5a;
 }
 header{
     width: 100%;
