--- a/style.css
+++ b/style.css
@@ -30,14 +30,16 @@ header{
 }
 nav{
     width:100%;
-    display: flex;
-    align-items: center;
     justify-content: space-between;
     padding: 10px 2%;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     position: static;
     top: 0;
     z-index: 10;
+}
+.flex-display{
+    display: flex;
+    align-items: center;
 }
 .left-img{
     width: 100%;
@@ -63,4 +65,22 @@ nav{
     width: 50px;
     border-radius: 50%;
     margin-right: 0;
+}
+.middle-img .mice-icon{
+    width: 20px;
+}
+.middle-img .search-box-icon input{
+    width: 350px;
+    background: transparent;
+    border: none;
+    outline: none;
+}
+.middle-img .search-box-icon img{
+    width: 20px;
+}
+.middle-img .search-box-icon{
+    border: 1px solid #ccc;
+    margin-right: 15px;
+    padding: 10px 10px;
+    border-radius: 25px;
 }
