--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ nav{
     padding: 10px 10px;
     border-radius: 25px;
 }
-.side-bar{
+.sidebar{
     width: 20%;
     position: fixed;
     height: 100vh;
@@ -92,7 +92,7 @@ nav{
     padding-top: 80px;
     padding-left: 2%;
 }
-.side-bar .shortcut-links a img{
+.sidebar .shortcut-links a img{
     width: 20px;
     margin-right: 20px;
 }
@@ -106,7 +106,7 @@ nav{
 .shortcut-links a:first-child{
     color: #ed3833;
 }
-.side-bar hr{
+.sidebar hr{
     border: 0;
     background: #ccc;
     height: 1px;
@@ -128,4 +128,113 @@ nav{
     width: 25px;
     border-radius: 50%;
     margin-right: 20px;
+}
+
+/* ----javascript adding---- */
+
+.slider{
+    width: 5%;
+}
+.slider a p{
+    display: none;
+}
+.slider h3{
+    display: none;
+}
+.slider hr{
+    width: 50%;
+    margin-bottom: 25px;
+}
+
+
+/* -----main content---- */
+
+.container{
+    background: #f5f5f5;
+    padding-left: 19%;
+    padding-right: 2%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.large-container{
+    padding-left: 7%;
+}
+.banner{
+    width: 100%;
+}
+.banner img{
+    width: 100%;
+    border-radius: 10px;
+}
+.list-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit , minmax(250px , 1fr));
+    grid-column-gap: 16px;
+    grid-row-gap: 30px;
+    margin-top: 15px; 
+}
+.vid-list .thumbnail{
+    width: 100%;
+    border-radius: 5px;
+}
+.vid-list .flex-display{
+    align-items: flex-start;
+    margin-top: 7px;
+}
+.vid-list .flex-display img{
+    width: 25px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.vid-info{
+    color: #5a5a5a;
+    font-size: 15px;
+}
+.vid-info p{
+    font-size: 13px;
+    font-weight: bold;
+}
+.vid-info a{
+    color: #000;
+    font-weight: 600;
+    display: block;
+    margin-bottom: 5px;
+}
+
+/* ---responsive-design---- */
+
+@media(max-width:900px) {
+    .menu-icon{
+        display: none;
+    }
+    .sidebar{
+        display: none;
+    }
+    .container, .large-container{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .left-img .user-logo{
+        width: 100px;
+    }
+    .right-img img{
+         display: none;
+    }
+    .right-img .user-image{
+        display: block;
+        width: 30px;
+    }
+    .search-box-icon{
+        height: 32px;
+    }
+    .middle-img .search-box-icon .search{
+        width: 15px;
+    }
+    .middle-img .search-box-icon input{
+        width: 100px;
+    }
+    .middle-img .mice-icon{
+        width: 15px;
+        margin-left: -5px;
+    }
 }
