--- a/style.css
+++ b/style.css
@@ -435,3 +435,17 @@ nav{
         margin-top: 15px;
     }
  }
+
+
+#pageloader{
+    background: #fff url(images/Loading.gif) no-repeat center;
+    background-size: 15%;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 1000;    
+}
+
+iframe{
+    display: none;
+}
