--- a/style.css
+++ b/style.css
@@ -24,12 +24,18 @@ header{
     width: 100%;
     display: flex;
 }
-.fixed{
+/* .fixed{
     display: block;
-}
+} */
 .one-container{
     width: 1360px;
     margin: 0 auto;
+}
+.dropmenu {
+    display: none;
+}
+.dropmenu a{
+    display: block;
 }
 nav{
     width:100%;
@@ -188,6 +194,21 @@ nav{
     width: 25px;
     border-radius: 50%;
     margin-right: 10px;
+}
+.container .vid-list a{
+    position: relative;
+}
+.vid-list a p{
+    top: 0%;
+    position: absolute;
+    left: 40%;
+    opacity: 0;
+}
+.vid-list p img:hover{
+    opacity: 11;
+    color: #fff;
+    top: -40%;
+
 }
 .vid-info{
     color: #5a5a5a;
@@ -452,4 +473,8 @@ nav{
 
 iframe{
     display: none;
+}
+
+video{
+    display: block;
 }
